...
                                </constraints>
                                <color key="tintColor" red="0.09284200519323349" green="0.50492769479751587" blue="0.98273533582687378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Just right">
                                    <color key="titleColor" red="0.61943376064300537" green="0.6235852837562561" blue="0.62349897623062134" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" red="0.09284200519323349" green="0.50492769479751587" blue="0.98273533582687378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Too fast">
                                    <color key="titleColor" red="0.69785714149475098" green="0.70202124118804932" blue="0.70192140340805054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" red="0.09284200519323349" green="0.50492769479751587" blue="0.98273533582687378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Too slow">
                                    <color key="titleColor" red="0.64296072721481323" green="0.64711600542068481" blue="0.64702564477920532" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" red="0.09284200519323349" green="0.50492769479751587" blue="0.98273533582687378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Yes">
                                    <color key="titleColor" red="0.60230121550000004" green="0.60826459389999998" blue="0.60826459389999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" red="0.09284200519323349" green="0.50492769479751587" blue="0.98273533582687378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="No">
                                    <color key="titleColor" red="0.60230121553697624" green="0.60826459390862941" blue="0.60826459390862941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                <state key="normal" title="SUBMIT">
                                    <color key="titleColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Feedback" image="FeedbackIcon-App-29x29.png" id="ZxW-ou-XUW"/>
                    <navigationItem key="navigationItem" id="HTD-9d-ipn"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
...
