...
    override func viewDidLoad() {
        super.viewDidLoad()
        prosentText.isHidden = true
        assignmentsText.isHidden = true
        nrOfSubjects.delegate  = self
        completed.delegate  = self
        fag.append("Click here to choose a subject")
        fag += ChooseSubject.mySubjects
        self.textBox.text? = fag[0]
        self.dropDown.isHidden = true
    }
    
    //runs every time a user access the 'statistics'-page, not neccesary when the view is loaded.
...
